<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.maseera.hierarchyviewer.First"
    tools:showIn="@layout/activity_first">

    <TextView
        android:id="@+id/textView_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="57dp"
        android:text=""
        android:textSize="20dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_user"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="57dp"
        android:text="@string/about_your_organisation"
        android:textSize="20dp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button_ViewHierarchy"
        android:layout_width="237dp"
        android:layout_height="38dp"
        android:layout_above="@+id/button_table"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="47dp"
        android:background="?attr/colorPrimary"
        android:text="@string/view_hierarchy"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/button_table"
        android:layout_width="237dp"
        android:layout_height="38dp"
        android:layout_above="@+id/textView_note"
        android:layout_alignLeft="@+id/button_ViewHierarchy"
        android:layout_alignStart="@+id/button_ViewHierarchy"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="66dp"
        android:background="?attr/colorPrimary"
        android:text="@string/view_table"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/textView_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_table"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button_table"
        android:layout_gravity="center_horizontal"
        android:text="@string/note_refesh_app_after_any_change_in_database"
        android:textSize="10dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:text="@string/lets_go2"
        android:textSize="20dp"
        android:textStyle="italic" />

</RelativeLayout>
